--- a/emociones/src/main/java/com/karla/msicu/emociones/curso/NuevoTema.form
+++ b/emociones/src/main/java/com/karla/msicu/emociones/curso/NuevoTema.form
@@ -3,7 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="title" type="java.lang.String" value="Nuevo Curso"/>
+    <Property name="title" type="java.lang.String" value="Nuevo Tema"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -24,10 +24,11 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
+          <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="CampoNombre" max="32767" attributes="0"/>
+                  <Component id="CampoCurso" alignment="0" max="32767" attributes="0"/>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="EtiquetaNombre" min="-2" max="-2" attributes="0"/>
@@ -35,6 +36,7 @@
                               <EmptySpace min="-2" pref="153" max="-2" attributes="0"/>
                               <Component id="GuardarNombre" min="-2" max="-2" attributes="0"/>
                           </Group>
+                          <Component id="EtiquetaCurso" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="0" pref="156" max="32767" attributes="0"/>
                   </Group>
@@ -50,9 +52,13 @@
               <Component id="EtiquetaNombre" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="CampoNombre" min="-2" pref="30" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
+              <Component id="EtiquetaCurso" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="GuardarNombre" max="32767" attributes="0"/>
-              <EmptySpace min="-2" max="-2" attributes="0"/>
+              <Component id="CampoCurso" min="-2" pref="30" max="-2" attributes="0"/>
+              <EmptySpace pref="9" max="32767" attributes="0"/>
+              <Component id="GuardarNombre" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -68,10 +74,17 @@
     </Component>
     <Component class="javax.swing.JLabel" name="EtiquetaNombre">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Nombre del curso"/>
+        <Property name="text" type="java.lang.String" value="Nombre del tema"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="CampoNombre">
+    </Component>
+    <Component class="javax.swing.JLabel" name="EtiquetaCurso">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Curso al que pertenece"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="CampoCurso">
     </Component>
   </SubComponents>
 </Form>
