--- a/emociones/src/main/java/com/karla/msicu/emociones/curso/EditarVideo.form
+++ b/emociones/src/main/java/com/karla/msicu/emociones/curso/EditarVideo.form
@@ -46,7 +46,7 @@
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="CampoCurso" alignment="0" max="32767" attributes="0"/>
+                          <Component id="CampoVideo" alignment="0" max="32767" attributes="0"/>
                           <Component id="CampoNombre" alignment="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
@@ -65,7 +65,7 @@
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="EtiquetaCurso" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="CampoCurso" min="-2" pref="30" max="-2" attributes="0"/>
+              <Component id="CampoVideo" min="-2" pref="30" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="GuardarNombre" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
@@ -84,17 +84,17 @@
     </Component>
     <Component class="javax.swing.JLabel" name="EtiquetaNombre">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Nombre del tema"/>
+        <Property name="text" type="java.lang.String" value="Nombre del v&#xed;deo"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="CampoNombre">
     </Component>
     <Component class="javax.swing.JLabel" name="EtiquetaCurso">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Curso al que pertenece"/>
+        <Property name="text" type="java.lang.String" value="Reproducido"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="CampoCurso">
+    <Component class="javax.swing.JTextField" name="CampoVideo">
     </Component>
   </SubComponents>
 </Form>
